--- a/app/src/main/res/layout/activity_company_menu.xml
+++ b/app/src/main/res/layout/activity_company_menu.xml
@@ -8,7 +8,7 @@
     android:padding="20dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_companyMenuTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Internship\nConnect"
@@ -17,27 +17,47 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="150dp"/>
+        android:layout_marginTop="50dp"/>
+
+    <TextView
+        android:id="@+id/tv_companyMenuGreeting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:text="Hello <name>!"
+        app:layout_constraintTop_toBottomOf="@+id/tv_companyMenuTitle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_companyMenuJobs"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Login"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:text="Jobs"
+        app:layout_constraintTop_toBottomOf="@+id/tv_companyMenuGreeting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_register"
+        android:id="@+id/btn_companyMenuProfile"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="Profile"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/btn_companyMenuJobs"
+        android:layout_marginTop="10dp"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_companyMenuLogout"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_companyMenuProfile"
+        android:layout_marginTop="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
