--- a/app/src/main/res/layout/activity_company_menu.xml
+++ b/app/src/main/res/layout/activity_company_menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_companyMenuTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Internship\nConnect"
+        android:text="@string/internship_connect"
         android:textAlignment="center"
         android:textSize="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/btn_companyMenuJobs"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Jobs"
+        android:text="@string/jobs"
         app:layout_constraintTop_toBottomOf="@+id/tv_companyMenuGreeting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:id="@+id/btn_companyMenuProfile"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Profile"
+        android:text="@string/profile"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_companyMenuJobs"
