--- a/app/src/main/res/layout/activity_intern_menu.xml
+++ b/app/src/main/res/layout/activity_intern_menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_internMenuTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Internship\nConnect"
+        android:text="@string/internship_connect"
         android:textAlignment="center"
         android:textSize="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/btn_internMenuJobs"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Jobs"
+        android:text="@string/jobs"
         app:layout_constraintTop_toBottomOf="@+id/tv_internMenuGreeting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:id="@+id/btn_internMenuMyJobs"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="My Jobs"
+        android:text="@string/my_jobs"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuJobs"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:id="@+id/btn_internMenuCompanies"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Companies"
+        android:text="@string/companies"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuMyJobs"
@@ -65,7 +65,7 @@
         android:id="@+id/btn_internMenuProfile"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Profile"
+        android:text="@string/profile"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuCompanies"
@@ -75,7 +75,7 @@
         android:id="@+id/btn_internMenuLogout"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Logout"
+        android:text="@string/logout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuProfile"
