--- a/app/src/main/res/layout/activity_register_intern.xml
+++ b/app/src/main/res/layout/activity_register_intern.xml
@@ -105,7 +105,7 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:layout_marginTop="10dp"
         />
 
