--- a/app/src/main/res/layout/activity_company_menu.xml
+++ b/app/src/main/res/layout/activity_company_menu.xml
@@ -17,17 +17,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        android:textColor="@color/blue"/>
 
     <TextView
         android:id="@+id/tv_companyMenuGreeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24dp"
-        android:text=""
+        android:text="Hello <Company>"
         app:layout_constraintTop_toBottomOf="@+id/tv_companyMenuTitle"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/blue"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_companyMenuJobs"
@@ -38,6 +40,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -48,7 +52,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_companyMenuJobs"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_companyMenuLogout"
@@ -58,6 +64,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_companyMenuProfile"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
