--- a/app/src/main/res/layout/activity_intern_menu.xml
+++ b/app/src/main/res/layout/activity_intern_menu.xml
@@ -17,7 +17,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        android:textColor="@color/blue"/>
 
     <TextView
         android:id="@+id/tv_internMenuGreeting"
@@ -27,7 +28,8 @@
         android:text="Hello name!"
         app:layout_constraintTop_toBottomOf="@+id/tv_internMenuTitle"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/black"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_internMenuJobs"
@@ -38,6 +40,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -49,6 +53,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -59,7 +65,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuMyJobs"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_internMenuProfile"
@@ -69,7 +77,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuCompanies"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_internMenuLogout"
@@ -79,6 +89,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuProfile"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
