--- a/app/src/main/res/layout/activity_register_intern.xml
+++ b/app/src/main/res/layout/activity_register_intern.xml
@@ -14,14 +14,16 @@
         android:layout_height="wrap_content"
         android:textSize="24dp"
         android:text="@string/register"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="@color/blue"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:text="@string/intern"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_registerInternName"
@@ -130,6 +132,8 @@
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"
         />
 
 </LinearLayout>
