--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,30 +17,6 @@
         android:gravity="center"
         android:textColor="@color/blue"/>
 
-    <!--<TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:text="@string/intern"
-        android:gravity="center"
-        android:textColor="@color/black"/>-->
-
-    <!--    <EditText-->
-<!--        android:id="@+id/et_textName"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="102dp"-->
-<!--        android:layout_marginTop="32dp"-->
-<!--        android:layout_marginEnd="100dp"-->
-<!--        android:ems="10"-->
-<!--        android:inputType="textPersonName"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:hint="Name"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/et_textEmail"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="1.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,14 +29,28 @@
         android:layout_height="wrap_content"
         />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="16dp"
+        android:text="Name"/>
+
     <EditText
         android:id="@+id/et_registerInternName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textSize="14dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="16dp"
+        android:text="Email"/>
 
     <EditText
         android:id="@+id/et_registerInternEmail"
@@ -69,22 +59,15 @@
         android:hint="Email"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:layout_marginTop="10dp"
+        android:textSize="14dp"
         />
 
-<!--    <EditText-->
-<!--        android:id="@+id/et_textEmail"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="97dp"-->
-<!--        android:layout_marginEnd="104dp"-->
-<!--        android:ems="10"-->
-<!--        android:inputType="textEmailAddress"-->
-<!--        android:hint="Email"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/textContactNumber"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/et_textName" />-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="16dp"
+        android:text="Contact Number"/>
 
     <EditText
         android:id="@+id/et_registerInternNumber"
@@ -93,23 +76,14 @@
         android:hint="Contact Number"
         android:ems="10"
         android:inputType="text|number"
-        android:layout_marginTop="10dp"
-        />
+        android:textSize="14dp" />
 
-<!--    <EditText-->
-<!--        android:id="@+id/et_textContactNumber"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="96dp"-->
-<!--        android:layout_marginEnd="105dp"-->
-<!--        android:ems="10"-->
-<!--        android:inputType="text|number"-->
-<!--        android:hint="Contact Number"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/textPassword"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="1.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/et_textEmail"/>-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="16dp"
+        android:text="Password"/>
 
     <EditText
         android:id="@+id/et_registerInternPassword"
@@ -118,23 +92,7 @@
         android:hint="Password"
         android:ems="10"
         android:inputType="textPassword"
-        android:layout_marginTop="10dp"
-        />
-
-<!--    <EditText-->
-<!--        android:id="@+id/et_textPassword"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="100dp"-->
-<!--        android:layout_marginEnd="101dp"-->
-<!--        android:ems="10"-->
-<!--        android:inputType="text"-->
-<!--        android:hint="Password"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textContactNumber" />-->
+        android:textSize="14dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_registerIntern"
