--- a/app/src/main/res/layout/activity_add_internship.xml
+++ b/app/src/main/res/layout/activity_add_internship.xml
@@ -1,122 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".company.AddInternship">
+    tools:context=".company.AddInternship"
+    android:orientation="vertical"
+    android:padding="20dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:text="@string/add_internship"
+        android:gravity="center"
+        android:textColor="@color/blue"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:text="Title"
+        android:layout_marginTop="20dp"/>
 
 
     <EditText
         android:id="@+id/textPositionTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="8dp"
+        android:hint="Title"
         android:ems="10"
-        android:hint="Position Title"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textJobDescription"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:inputType="text"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:text="Description"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/textJobDescription"
-        android:layout_width="216dp"
-        android:layout_height="113dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="114dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:hint="Description"
         android:ems="10"
-        android:gravity="start|top"
-        android:hint="Job Description"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/textFunction"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPositionTitle" />
+        android:inputType="text|textMultiLine"
+        android:gravity="top|left"
+        android:lines="20"
+        android:minLines="5"
+        android:scrollHorizontally="false"
+        android:scrollbars="vertical"/>
 
-    <EditText
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:text="Function"
+        android:layout_marginTop="10dp"/>
+
+    <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/textFunction"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Function"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textType"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textJobDescription" />
+        android:entries="@array/function_list"
+        android:layout_marginTop="5dp"/>
 
-    <EditText
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:text="Type"
+        android:layout_marginTop="10dp"/>
+
+    <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/textType"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginStart="83dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="119dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:hint="Type"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textBenefits"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textFunction" />
-
-    <EditText
-        android:id="@+id/textBenefits"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Benefits"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textLink"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textType" />
+        android:entries="@array/function_list"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:text="Link"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/textLink"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="129dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
         android:hint="Link"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/buttonAddInternship"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textBenefits" />
+        android:ems="10"
+        android:inputType="textUri"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonAddInternship"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="8dp"
-        android:text="Add Internship"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textLink" />
+        android:text="Add"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
